--- a/Webpage.1
+++ b/Webpage.1
@@ -1,8 +1,11 @@
-!DOCTYPE html>
-<html><head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 <title>My first Webpage</title>
-</head><body>
-<h1>Welcome to My First Webpage</h1>
-<p>This is a simple webpage created as part of a learning exercise.</p>
-<p><img src="https://via.placeholder.com/150" alt="Placeholder Image"></p>
-</body></html>
+</head>
+<body>
+<h1>Welcome to My First Webpage: Adrianna Galeano</h1>
+<p>This is a simple webpage created as part of a learning exercise. This webpage is facts and photography on women's health and beauty trends</p>
+<p><img src="https://images.unsplash.com/photo-1730647338786-404f7ac0c936?q=80&w=387&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Beauty and Health"></p>
+</body>
+</html>
